# SSVAutoUpdater

./: .gitignore  .gitmodules  AutoUpdater.cpp  AutoUpdater.h  CMakeLists.txt  SSVAutoUpdater.mk  SSVAutoUpdater.project  SSVAutoUpdater.txt  main.cpp
Utils/: MD5.h  Utils.cpp  Utils.h
_RELEASE/: updaterConfig.json  updaterLog.txt
src/SSVAutoUpdater/: main.cpp
